-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0
-
None
-
ArchLinux system, with packages from [testing] repo
plasmashell sets type of Desktop on its surfaces, however when it tries to get wl_surface for the QWindow, it is not getting wl_surface returned,
https://cgit.kde.org/kwayland.git/tree/src/client/surface.cpp#n99
However nativeResourceForWindow returns just nullptr,
which results in https://cgit.kde.org/plasma-workspace.git/tree/shell/desktopview.cpp#n311 failing and breaking the positioning for all of Plasma session.
Downstream bug: https://bugs.kde.org/show_bug.cgi?id=375539
For Gerrit Dashboard: QTBUG-58423 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
184278,2 | Initialize the first wl_surface in the constructor of QWaylandWindow | 5.8 | qt/qtwayland | Status: MERGED | +2 | 0 |
195835,2 | Send SurfaceCreated and SurfaceAboutToBeDestroyed events for wl_surface | dev | qt/qtwayland | Status: MERGED | +2 | 0 |