Initialize the first wl_surface in the constructor of QWaylandWindow

This makes it possible to get a pointer to a wl_surface immediately after
platform window creation.

Task-number: QTBUG-58423
Change-Id: I2e62380af8b34d05ae31baacc071766493633022
Reviewed-by: Marco Martin <notmart@gmail.com>
Reviewed-by: Giulio Camuffo <giulio.camuffo@kdab.com>